--- a/Content/css/master.css
+++ b/Content/css/master.css
@@ -200,6 +200,7 @@ nav {
     width: 300px;
     background-color: var(--primary-color);
     border-radius: 6px;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
     transition: opacity 0.1s linear;
 }
 
