--- a/Site.Master
+++ b/Site.Master
@@ -35,7 +35,7 @@
             <nav id="nav">
                 <div class="nav-center">
                     <!-- Nav Header -->
-                    <div class="nav-header">
+                    <div id="navHeader" class="nav-header" runat="server">
                         <a href="Translator.aspx">
                             <div class="logo">
                                 <img src="/Content/image/rojakjelah_logo-icon_bw.png" alt="logo" />
