--- a/Content/css/dictionary.css
+++ b/Content/css/dictionary.css
@@ -1,288 +1,349 @@
-﻿/* Header Search / Add Suggest  */
-/* Header Search / Add Suggest  */
-/* Header Search / Add Suggest  */
-.dictionary-header {
-    margin: 20px 0;
+﻿body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
-    .dictionary-header .header-title {
-        display: flex;
-        align-items: center;
-    }
-
-        .dictionary-header .header-title h1 {
-            font-size: 22px;
-            color: #D35555;
-        }
-
-        .dictionary-header .header-title .report {
-            padding-left: 0.5rem;
-        }
-
-            .dictionary-header .header-title .report button {
-                border: none;
-                border: 2px solid #d35555;
-                padding: 5px 7px;
-                background: none;
-                border-radius: 5px;
-                transition: 0.4s;
-                border-radius: 5px;
-            }
-
-                .dictionary-header .header-title .report button:hover {
-                    border-color: #e29090;
-                }
-
-                    .dictionary-header .header-title .report button:hover i {
-                        color: #e29090;
-                    }
-
-                .dictionary-header .header-title .report button:focus {
-                    border-color: #f2cccc;
-                }
-
-                    .dictionary-header .header-title .report button:focus i {
-                        color: #f2cccc;
-                    }
-
-            .dictionary-header .header-title .report i {
-                font-size: 20px;
-                color: #D35555;
-            }
-
-    /* Search or Add Suggest */
-    /* Search or Add Suggest */
-    /* Search or Add Suggest */
-    .dictionary-header .header-search {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-        .dictionary-header .header-search .search-box {
-            width: 70%;
-        }
-
-            .dictionary-header .header-search .search-box input {
-                border: none;
-                padding: 10px;
-                color: #D35555;
-                font-size: 15px;
-                border: 1px solid #D35555;
-                width: 100%;
-            }
-
-                .dictionary-header .header-search .search-box input:focus {
-                    outline: 0;
-                    box-shadow: none;
-                    border: 2px solid #D35555;
-                }
-
-
-
-        /* Add Suggest Terms  */
-        /* Add Suggest Terms  */
-        .dictionary-header .header-search .add-suggest div#addSuggestItem {
-            top: 90px;
-        }
-
-        .dictionary-header .header-search .add-suggest .suggest-btn {
-            font-weight: 400;
-            border: none;
-            background: #d35555;
-            color: #ffff;
-            font-size: 20px;
-            padding: 5px 20px;
-            border-radius: 5px;
-            transition: 0.4s;
-        }
-
-            .dictionary-header .header-search .add-suggest .suggest-btn:hover {
-                background: #da4343;
-            }
-
-            .dictionary-header .header-search .add-suggest .suggest-btn :focus {
-                background: #e29090;
-            }
-
-
-        /* Add Suggest Modal Form  */
-        .dictionary-header .header-search .add-suggest .modal-header .suggest-title {
-            font-size: 25px;
-            color: #D35555;
-        }
-
-
-
-        /* Add Suggest Form */
-        .dictionary-header .header-search .add-suggest .modal-body form .form-item {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-            .dictionary-header .header-search .add-suggest .modal-body form .form-item .form-field {
-                width: 48%;
-            }
-
-                .dictionary-header .header-search .add-suggest .modal-body form .form-item .form-field label {
-                    color: #D35555;
-                    font-size: 18px;
-                    padding: 0.5rem;
-                }
-
-                .dictionary-header .header-search .add-suggest .modal-body form .form-item .form-field input {
-                    width: 100%;
-                    border: none;
-                    color: #000;
-                    padding: 5px 10px;
-                    border: 1px solid #D35555;
-                    border-radius: 5px;
-                }
-
-                    .dictionary-header .header-search .add-suggest .modal-body form .form-item .form-field input:focus {
-                        outline: 0;
-                        box-shadow: none;
-                        border: 2px solid #D35555;
-                    }
-
-
-        /* Select Language Dropdown  */
-        .dictionary-header .header-search .add-suggest .modal-body form .select-language .form-field {
-            width: 55%;
-            margin-top: 20px;
-        }
-
-            .dictionary-header .header-search .add-suggest .modal-body form .select-language .form-field label {
-                color: #D35555;
-                font-size: 18px;
-                padding: 0.2rem;
-            }
-
-            .dictionary-header .header-search .add-suggest .modal-body form .select-language .form-field select {
-                width: 100%;
-                border: none;
-                color: #000;
-                padding: 5px 10px;
-                border: 1px solid #D35555;
-                border-radius: 5px;
-            }
-
-                .dictionary-header .header-search .add-suggest .modal-body form .select-language .form-field select:focus {
-                    outline: 0;
-                    box-shadow: none;
-                    border: 2px solid #D35555;
-                }
-
-
-        /* Example  */
-        .dictionary-header .header-search .add-suggest .modal-body form .example .form-field {
-            width: 100%;
-        }
-
-            .dictionary-header .header-search .add-suggest .modal-body form .example .form-field label {
-                color: #D35555;
-                font-size: 18px;
-                padding: 0.5rem;
-            }
-
-            .dictionary-header .header-search .add-suggest .modal-body form .example .form-field textarea {
-                width: 100%;
-                border: none;
-                color: #000;
-                padding: 5px 10px;
-                border: 1px solid #D35555;
-                border-radius: 5px;
-            }
-
-                .dictionary-header .header-search .add-suggest .modal-body form .example .form-field textarea:focus {
-                    outline: 0;
-                    box-shadow: none;
-                    border: 2px solid #D35555;
-                }
-
-        .dictionary-header .header-search .add-suggest form .button {
-            display: flex;
-            justify-content: right;
-            align-items: center;
-        }
-
-            .dictionary-header .header-search .add-suggest form .button .cancel {
-                border: none;
-                border: 2px solid #d35555;
-                width: 100px;
-                padding: 5px 0;
-                background: none;
-                border-radius: 5px;
-                transition: 0.4s;
-            }
-
-                .dictionary-header .header-search .add-suggest form .button .cancel:hover {
-                    border-color: #e29090;
-                    color: #e29090;
-                }
-
-
-                .dictionary-header .header-search .add-suggest form .button .cancel:focus {
-                    outline: 0;
-                    box-shadow: none;
-                    border-color: #f2cccc;
-                    color: #f2cccc;
-                }
-
-            .dictionary-header .header-search .add-suggest form .button .submit {
-                border: none;
-                background: #d35555;
-                color: #ffff;
-                font-size: 20px;
-                padding: 5px 0;
-                width: 100px;
-                border-radius: 5px;
-                transition: 0.4s;
-            }
-
-                .dictionary-header .header-search .add-suggest form .button .submit:hover {
-                    background: #da4343;
-                }
-
-                .dictionary-header .header-search .add-suggest form .button .submit:focus {
-                    background: #e29090;
-                }
-
-/* Add Suggest Success message  */
-/* #submitForm {
-    display: block;
-} */
-.addSuggest-message {
-    position: fixed;
-    top: 50%;
-    left: 0;
-    width: 100%;
+#mainForm {
+    flex: 1;
 }
 
-#successMessage {
-    background: #D35555;
-    padding: 1rem;
-    color: #fff;
+.body-content {
+    margin: 0 10rem;
+}
+
+/* Button */
+.button-primary {
+    display: flex;
+    flex-direction: row;
+    background-color: var(--primary-color) !important;
+    color: #ffffff !important;
+    transition: 0.3s ease-out;
+}
+
+.button-primary:hover {
+    background-color: var(--primary-color-hover) !important;
+}
+
+.button-primary:active {
+    background-color: var(--primary-color-active) !important;
+}
+
+.button-small {
+    display: flex;
+    flex-direction: row;
+    background-color: #ffffff;
+    color: var(--primary-color) !important;
+    transition: 0.3s ease-out;
+}
+
+.button-small:hover {
+    color: var(--primary-color-hover) !important;
+}
+
+.button-small:active {
+    color: var(--primary-color-active) !important;
+}
+
+
+/* Dropdown */
+/* Custom Dropdowns */
+.dropdown {
     position: relative;
-    width: 30%;
-    margin: auto;
+    font-family: 'Rubik', Arial, sans-serif;
+}
+
+.dropdown select {
+    display: none; /*hide original SELECT element */
+}
+
+.dropdown-selected {
+    background-color: var(--primary-color);
+}
+
+/* Style the arrow inside the select element */
+.dropdown-selected:after {
+    position: absolute;
+    content: "";
+    top: 14px;
+    right: 10px;
+    width: 0;
+    height: 0;
+    border: 6px solid transparent;
+    border-color: #fff transparent transparent transparent;
+}
+
+/* Point the arrow upwards when the select box is open (active) */
+.dropdown-selected.select-arrow-active:after {
+    border-color: transparent transparent #fff transparent;
+    top: 7px;
+}
+
+/* style the items (options), including the selected item */
+.dropdown-items div, .dropdown-selected {
+    color: #ffffff;
+    padding: 8px 16px;
+    border: 1px solid transparent;
+    border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
+    cursor: pointer;
+}
+
+/* Style items (options) */
+.dropdown-items {
+    position: absolute;
+    background-color: var(--primary-color);
+    top: 100%;
+    left: 0;
+    right: 0;
+    z-index: 99;
+}
+
+.dropdown-items div:hover, .same-as-selected {
+    background-color: var(--primary-color-hover);
+}
+
+/* Hide the items when the select box is closed */
+.dropdown-hide {
     display: none;
 }
 
-    #successMessage #cls-btn {
-        position: absolute;
-        top: 5px;
-        right: 5px;
-        color: #fff;
-        border: none;
-        background: none;
+
+
+/* Dictionary Header */
+.dictionary-header {
+    padding-top: 2rem;
+}
+
+.dictionary-header-title {
+    color: var(--primary-color);
+    font-family: 'Mitr', Arial, sans-serif;
+}
+
+.dictionary-controls {
+    display: flex;
+    flex-direction: row;
+}
+
+.search-bar {
+    flex: 0.8;
+    display: flex;
+    flex-direction: row;
+}
+
+.dropdown {
+    flex: 0.17;
+}
+
+#txtSearch {
+    flex: 0.70;
+    padding: 0 1rem;
+    border: 1px solid var(--primary-color);
+}
+
+#txtSearch:focus {
+    box-shadow: inset 0 0 0 1px var(--primary-color);
+    outline: none;
+}
+
+#lnkSearch {
+    flex: 0.13;
+}
+
+#lnkSearch:hover {
+    flex: 0.13;
+}
+
+.dictionary-buttons {
+    flex: 0.2;
+    display: flex;
+    flex-direction: row;
+    color: var(--primary-color);
+}
+
+
+
+/* Dictionary Container */
+
+
+
+
+/* Modals */
+.modal-window {
+    display: none;
+    position: fixed;
+    align-items: center;
+    z-index: 100;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-dialog {
+    width: 50%;
+    padding: 2rem 5rem 1rem 5rem;
+    background-color: white;
+    border-radius: 5px;
+    overflow-y: initial;
+    animation: slideIn .3s ease-out forwards;
+}
+
+.modal-header {
+    display: flex;
+    padding-bottom: 0.5rem;
+    flex-direction: row;
+    align-items: center;
+    color: var(--primary-color);
+}
+
+.modal-icon {
+    flex: 0.06;
+    font-size: 24px;
+}
+
+.modal-title {
+    flex: 0.89;
+    text-align: left;
+}
+
+.modal-btn-close {
+    flex: 0.05;
+    background-color: white;
+    border: none;
+    color: #323232;
+    font-size: 28px;
+    transition: ease-out 0.1s;
+}
+
+.modal-btn-close:hover {
+    color: #828282;
+}
+
+.modal-btn-close:active {
+    color: #b2b2b2;
+}
+
+.modal-body {
+    height: 60vh;
+    padding-top: 1rem;
+    border-top: 1px solid rgba(0, 0, 0, 0.2);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    overflow-y: auto;
+}
+
+.modal-title {
+    color: var(--primary-color);
+    font-size: 26px;
+    font-family: 'Mitr', Arial, sans-serif;
+    font-weight: 500;
+}
+
+.modal-empty {
+    display: flex;
+    flex-direction: row;
+    column-gap: 2rem;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    background-color: #eaeaea;
+}
+
+.modal-empty i {
+    color: #525252;
+    font-size: 40px;
+}
+
+.modal-empty h1 {
+    margin: 0;
+    color: #525252;
+    font-family: 'Rubik', Arial, sans-serif;
+    font-size: 30px;
+}
+
+.modal-item {
+    margin-bottom: 1rem;
+    padding: 1rem;
+    background-color: #eaeaea;
+}
+
+.modal-item h2 {
+    color: var(--primary-color);
+    font-size: 18px;
+    word-break: break-word;
+}
+
+.modal-item h3 {
+    color: var(--primary-color);
+    font-family: 'Rubik', Arial, sans-serif;
+    font-size: 14px;
+    word-break: break-word;
+}
+
+.modal-item h4 {
+    padding-top: 0.4rem;
+    color: #323232;
+    font-family: 'Rubik', Arial, sans-serif;
+    font-size: 14px;
+    word-break: break-word;
+}
+
+.modal-item-row {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    column-gap: 2rem;
+}
+
+.modal-item-row small {
+    flex: 0.9;
+    color: #323232;
+    font-family: 'Rubik', Arial, sans-serif;
+    font-size: 12px;
+    font-weight: 400;
+}
+
+.modal-item-btn {
+    flex: 0.1;
+    display: flex;
+    align-self: flex-end;
+    padding: 0 0.4rem;
+    border: 2px solid var(--primary-color);
+    color: var(--primary-color);
+    background: none;
+    border-radius: 4px;
+    font-family: 'Rubik', Arial, sans-serif;
+    transition: all 0.2s ease-out;
+}
+
+.modal-item-btn:hover {
+    border-color: var(--primary-color-hover);
+    color: var(--primary-color-hover);
+}
+
+.modal-item-btn:active {
+    border-color: var(--primary-color-active);
+    color: var(--primary-color-active);
+}
+
+.modal-footer {
+    padding: 1rem 0;
+    color: var(--primary-color);
+    font-family: 'Rubik', Arial, sans-serif;
+    word-spacing: 0.2rem;
+}
+
+@keyframes slideIn {
+    from {
+        top: -300px;
+        opacity: 0;
     }
 
-        #successMessage #cls-btn i {
-            font-size: 20px;
-            color: #fff;
-        }
+    to {
+        top: 0;
+        opacity: 1;
+    }
+}
 
 @media screen and (max-width: 992px) {
     .dictionary-header .header-search {
@@ -308,64 +369,25 @@
         align-items: flex-start;
     }
 
-        .dictionary-header .header-search .search-box {
-            width: 100%;
-        }
-
-        .dictionary-header .header-search .add-suggest {
-            margin-top: 20px;
-        }
-}
-
-
-/* Dictionary Container  */
-/* Dictionary Container  */
-/* Dictionary Container  */
-
-.dictionary-container .dictionary-item {
-    background: #eaeaea;
-    padding: 1rem;
-    margin-top: 20px;
-}
-
-    .dictionary-container .dictionary-item .title h3 {
-        font-size: 20px;
-        color: #D35555;
+    .dictionary-header .header-search .search-box {
+        width: 100%;
     }
 
-    .dictionary-container .dictionary-item .item-content {
-        display: flex;
+    .dictionary-header .header-search .add-suggest {
+        margin-top: 20px;
     }
-
-        .dictionary-container .dictionary-item .item-content .left-item {
-            width: 20%;
-        }
-
-            .dictionary-container .dictionary-item .item-content .left-item p {
-                color: #000;
-                font-size: 18px;
-            }
-
-        .dictionary-container .dictionary-item .item-content .right-item {
-            width: 70%;
-        }
-
-            .dictionary-container .dictionary-item .item-content .right-item p {
-                color: #D35555;
-                font-size: 18px;
-            }
-
+}
 
 @media screen and (max-width: 492px) {
     .dictionary-container .dictionary-item .item-content {
         flex-direction: column;
     }
 
-        .dictionary-container .dictionary-item .item-content .left-item {
-            width: 100%;
-        }
+    .dictionary-container .dictionary-item .item-content .left-item {
+        width: 100%;
+    }
 
-        .dictionary-container .dictionary-item .item-content .right-item {
-            width: 100%;
-        }
+    .dictionary-container .dictionary-item .item-content .right-item {
+        width: 100%;
+    }
 }
